--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>KARBA Financial Consultant Ltd — Insurance & Real Estate in Nigeria</title>
+<!-- ✅ Basic SEO Setup -->
+<title>KARBA Financial Consultant Ltd | KARBA Insurance & Real Estate Nigeria</title>
+<meta name="description" content="KARBA Financial Consultant Ltd — trusted advisory for insurance and real estate in Nigeria. Search 'KARBA' for verified property listings, life insurance, and estate investments.">
+<meta name="keywords" content="KARBA, Karba Nigeria, Karba Financial Consultant, Karba Insurance, Karba Real Estate, Karba Properties, KARBA Lagos, KARBA investments, insurance broker Nigeria, real estate consultant">
+<link rel="canonical" href="https://karbafinancialconsultant.com/">  
 <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />      
 <meta name="description" content="Trusted advisory for insurance and real estate. Verified listings, direct with developers and owners. Fast WhatsApp support.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://karbafinancialconsultant.com/">
 
-<!-- Open Graph -->
-<meta property="og:title" content="KARBA — Insurance & Real Estate">
-<meta property="og:description" content="Verified property listings and trusted insurance advisory.">
-<meta property="og:type" content="website">
+<!-- ✅ Open Graph for social + search -->
+<meta property="og:title" content="KARBA Financial Consultant Ltd — Insurance & Real Estate in Nigeria">
+<meta property="og:description" content="Trusted insurance and real estate firm in Nigeria. Verified listings, smart investments, and advisory — KARBA.">
 <meta property="og:url" content="https://karbafinancialconsultant.com/">
 <meta property="og:image" content="https://karbafinancialconsultant.com/assets/karba-logo-gold.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="KARBA Financial Consultant Ltd">
+<meta name="twitter:description" content="Search 'KARBA' for trusted insurance & real estate solutions in Nigeria.">
+<meta name="twitter:image" content="https://karbafinancialconsultant.com/assets/karba-logo-gold.png">
 
 <!-- Social profiles for search -->
 <script type="application/ld+json">
@@ -478,6 +484,10 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
       </div>
     </div>
   </section>
+
+ <p style="text-align:center;opacity:0.7;font-size:13px;">
+KARBA Financial Consultant Ltd — also known simply as <strong>KARBA</strong> — provides trusted insurance and real estate advisory across Nigeria.
+</p> 
 
 <main id="dashboard" class="view" style="display:none">
   <section class="section" style="border-top:none">
