--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <section class="section" id="plans">
     <div class="container">
       <h2 class="title">KARBA Services</h2>
-      <p class="subtitle">We connect you to trusted solutions across Insurance and Real Estate.</p>
+      <p class="subtitle">We connect you to trusted solutions across Insurance and Real Estate in Nigeria.</p>
       <div class="grid grid-2">
         <div class="card">
           <h3 style="margin:0 0 8px 0">Insurance Advisory</h3>
@@ -203,7 +203,7 @@
         <h2 class="title">About KARBA</h2>
         <p class="subtitle" style="line-height:1.6">
           KARBA Financial Consultant Ltd is a legally registered Nigerian firm (RC: 8818675) offering Insurance, Financial, and Real Estate Consultancy services.
-Our goal is to bridge the gap between clients and trusted providers; ensuring that insurance and real estate advisory services are accessible, affordable, and dependable.
+          Our goal is to bridge the gap between clients and trusted providers; ensuring that insurance and real estate advisory services are accessible, affordable, and dependable.
           Our operations are guided by three core values: Transparency, Professionalism, and Innovation; which define how we serve our clients and partners.
           Our mission is to become Africa’s leading Insurance and Real Estate Consultancy brand, recognized for excellence, trust, and service to humanity.
         </p>
@@ -283,7 +283,9 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
            target="_blank" rel="noopener">💬 Message on WhatsApp</a>
       </div>
     </div>
-
+<p style="text-align:center;opacity:0.7;font-size:13px;">
+KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> provides trusted insurance and real estate advisory across Nigeria.
+</p>
     <!-- ===== PROMO 3 (example template) ===== -->
     <!--
     <div class="promo-box">
@@ -304,7 +306,6 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
 <section class="section" id="listings">
   <div class="container">
     <h2>Available Properties</h2>
-    <p>Live availability with external media links.</p>
     <p style="opacity:.7; margin-top:-6px;">Last updated: 2025-10-25</p>
 
     <style>
@@ -335,7 +336,7 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
       <img src="assets/land-ibeju-2.jpg" alt="Ibeju-Lekki land photo 2">
       <p>Price: ₦25m — Available</p>
       <a class="whatsapp-btn"
-         href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%20600sqm%20Land%20in%20Ibeju-Lekki%20(₦25m)."
+         href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%20600sqm%20Land%20in%20Ibeju-Lekki%20(₦25m)."
          target="_blank" rel="noopener">💬 Message on WhatsApp</a>
       <label for="land1" class="close-modal">× Close</label>
     </div>
@@ -354,7 +355,7 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
       <img src="assets/land-epe-2.jpg" alt="Epe plot photo 2">
       <p>Price: ₦12m — Available</p>
       <a class="whatsapp-btn"
-         href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%20300sqm%20Plot%20in%20Epe%20(₦12m)."
+         href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%20300sqm%20Plot%20in%20Epe%20(₦12m)."
          target="_blank" rel="noopener">💬 Message on WhatsApp</a>
       <label for="land2" class="close-modal">× Close</label>
     </div>
@@ -380,7 +381,7 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
       <img src="assets/lekki-duplex-2.jpg" alt="Lekki duplex photo 2">
       <p>Price: ₦180m — Available</p>
       <a class="whatsapp-btn"
-         href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%203-Bed%20Duplex%20in%20Lekki%20Phase%201%20(₦180m)."
+         href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%203-Bed%20Duplex%20in%20Lekki%20Phase%201%20(₦180m)."
          target="_blank" rel="noopener">💬 Message on WhatsApp</a>
       <label for="sale1" class="close-modal">× Close</label>
     </div>
@@ -399,7 +400,7 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
       <img src="assets/ajah-terrace-2.jpg" alt="Ajah terrace photo 2">
       <p>Price: ₦95m — Available</p>
       <a class="whatsapp-btn"
-         href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%204-Bed%20Terrace%20in%20Ajah%20(₦95m)."
+         href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%204-Bed%20Terrace%20in%20Ajah%20(₦95m)."
          target="_blank" rel="noopener">💬 Message on WhatsApp</a>
       <label for="sale2" class="close-modal">× Close</label>
     </div>
@@ -424,7 +425,7 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
       <img src="assets/yaba-2bed-2.jpg" alt="Yaba 2-bed photo 2">
       <p>Rent: ₦1.1m/yr — Available</p>
       <a class="whatsapp-btn"
-         href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%202-Bed%20Apartment%20in%20Yaba%20(₦1.1m/yr)."
+         href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%202-Bed%20Apartment%20in%20Yaba%20(₦1.1m/yr)."
          target="_blank" rel="noopener">💬 Message on WhatsApp</a>
       <label for="rent1" class="close-modal">× Close</label>
     </div>
@@ -443,7 +444,7 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
       <img src="assets/surulere-studio-2.jpg" alt="Surulere studio photo 2">
       <p>Rent: ₦650k/yr — Available</p>
       <a class="whatsapp-btn"
-         href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'm%20interested%20in%20the%20Studio%20Apartment%20in%20Surulere%20(₦650k/yr)."
+         href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%20the%20Studio%20Apartment%20in%20Surulere%20(₦650k/yr)."
          target="_blank" rel="noopener">💬 Message on WhatsApp</a>
       <label for="rent2" class="close-modal">× Close</label>
     </div>
@@ -463,7 +464,7 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
   <section class="section" id="contact">
     <div class="container row">
       <div>
-        <div class="ribbon">Free consultation — limited time</div>
+        <div class="ribbon">Free consultation — limited time.</div>
         <h3 style="margin:8px 0 0 0">Start with a quick chat. Get verified options within 24–48h.</h3>
       </div>
       <div class="cta">
@@ -484,10 +485,6 @@ Our goal is to bridge the gap between clients and trusted providers; ensuring th
       </div>
     </div>
   </section>
-
- <p style="text-align:center;opacity:0.7;font-size:13px;">
-KARBA Financial Consultant Ltd — also known simply as <strong>KARBA</strong> — provides trusted insurance and real estate advisory across Nigeria.
-</p> 
 
 <main id="dashboard" class="view" style="display:none">
   <section class="section" style="border-top:none">
