--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <section class="section" id="plans">
     <div class="container">
       <h2 class="title">KARBA Services</h2>
-      <p class="subtitle">We connect you to trusted solutions across Insurance and Real Estate in Nigeria.</p>
+      <p class="subtitle">We connect you to trusted solutions across Insurance and Real Estate.</p>
       <div class="grid grid-2">
         <div class="card">
           <h3 style="margin:0 0 8px 0">Insurance Advisory</h3>
