--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
 <div class="info-wrap">
   <section id="ins-plans" class="info-container">
     <div class="info-heading">
-      <h3 class="info-title">Insurance Plan Types</h3>
+      <h3 class="info-title">Insurance Plan</h3>
       <p class="info-sub">Quick overview of popular plans. Tap “See Photos” to view and chat on WhatsApp.</p>
     </div>
 
