--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- ✅ Open Graph for social + search -->
-<meta property="og:title" content="KARBA Financial Consultant Ltd — Insurance & Real Estate in Nigeria">
+<meta property="og:title" content="KARBA Financial Consultant Ltd — Real Estate & Insurance in Nigeria">
 <meta property="og:description" content="Trusted insurance and real estate firm in Nigeria. Verified listings, smart investments, and advisory — KARBA.">
 <meta property="og:url" content="https://karbafinancialconsultant.com/">
 <meta property="og:image" content="https://karbafinancialconsultant.com/assets/karba-logo-gold.png">
